--- a/src/main/webapp/protected/user/admin/enrolement/profil-utilisateur.xhtml
+++ b/src/main/webapp/protected/user/admin/enrolement/profil-utilisateur.xhtml
@@ -7,17 +7,90 @@
 
     <ui:define name="title">Profil Utilisateur</ui:define>
     <ui:define name="viewname">
-        <li>Pages</li>
-        <li><p:link outcome="/empty">Empty</p:link></li>
+        <li>#{messages.view_name_accueil}</li>
+        <li><p:link outcome="/protected/user/admin/enrolement/index">#{messages.view_name_administration}</p:link></li>
+        <li><p:link outcome="/protected/user/admin/enrolement/index">#{messages.view_name_enrolement}</p:link></li>
+        <li><p:link outcome="/protected/user/admin/enrolement/profil-utilisateur">#{messages.view_name_profil_utilisateur}</p:link></li>
     </ui:define>
 
     <ui:define name="content">
         <div class="ui-g">
             <div class="ui-g-12">
-                <div class="card">
-                    <h1>Empty Page</h1>
-                    <p>Use this page to start from scratch and place your custom content.</p>
-                    <p:button outcome="empty" value="Home" style="display:inline-block;margin-top:6px" icon="fa fa-home"/>
+                <div class="ui-g">
+                    <div class="ui-g-12">
+                        <h1>#{messages.view_name_profil_utilisateur}</h1>
+                    </div>
+                </div>
+                <div class="ui-g">
+                    <div class="ui-g-4">
+                        <div class="card">
+                            <p:outputPanel styleClass="text-align-center">
+                                <i class="fa fa-user" style="font-size: 8rem"/>
+                                <p:separator/>
+                                <h:outputText value="#{profilUtilisateurBacking.utilisateurDto.utilisateur.nom}" styleClass="text-xx-large text-bolder text-uppercase"/><br/>
+                                <h:outputText value="#{profilUtilisateurBacking.utilisateurDto.utilisateur.prenoms}" styleClass="text-large"/>
+                            </p:outputPanel>
+
+                            <p:spacer height="10" width="1"/>
+
+                            <p:outputPanel styleClass="text-align-center">
+                                <p>
+                                    <b>#{profilUtilisateurBacking.computeOld()} ans</b>, habite <b>#{profilUtilisateurBacking.utilisateurDto.utilisateur.adresse}</b>
+                                    #{profilUtilisateurBacking.utilisateurDto.utilisateur.email}, #{profilUtilisateurBacking.utilisateurDto.utilisateur.contactPrincipal},
+                                    #{profilUtilisateurBacking.utilisateurDto.utilisateur.contactSecondaire}.
+                                </p>
+                            </p:outputPanel>
+
+                            <p:spacer height="10" width="1"/>
+
+                            <p:outputPanel>
+                                <h:outputText value="En quête d'emploi : "/>#{(profilUtilisateurBacking.utilisateurDto.utilisateur.estEnQueteEmploi) ? 'Oui' : 'Non'}<br/>
+                                <h:outputText value="En poste          : "/>#{(profilUtilisateurBacking.utilisateurDto.utilisateur.contactPrincipal) ? 'Oui' : 'Non'}<br/>
+                                <h:outputText value="Entrepreneur      : "/>#{(profilUtilisateurBacking.utilisateurDto.utilisateur.contactSecondaire) ? 'Oui' : 'Non'}
+                            </p:outputPanel>
+                        </div>
+                    </div>
+
+                    <div class="ui-g-8">
+                        <div class="card">
+                            <h:outputText value="#{profilUtilisateurBacking.utilisateurDto.utilisateur.metier}" styleClass="text-fs-25 text-bold"/>
+                            <br/><br/>
+                            <ui:repeat value="#{profilUtilisateurBacking.tags}" var="tag">
+                                <span class="tag">#{tag}</span>
+                            </ui:repeat>
+                            <br/>
+                            <p:spacer height="20" width="10"/>
+                            <p:fieldset legend="Formations academiques">
+                                <p:dataTable id="recapFormationDT" value="#{profilUtilisateurBacking.utilisateurDto.formationList}" var="formation" rowIndexVar="index">
+                                    <p:column headerText="#" style="width: 20px;"><h:outputText value="#{index+1}"/></p:column>
+                                    <p:column headerText="Diplome"><h:outputText value="#{formation.diplome.libelle}"/></p:column>
+                                    <p:column headerText="Filière"><h:outputText value="#{formation.filiere}"/></p:column>
+                                    <p:column headerText="Année Obtention"><h:outputText value="#{formation.annee}"/></p:column>
+                                </p:dataTable>
+                            </p:fieldset>
+                            <p:spacer height="20" width="10"/>
+                            <p:fieldset legend="Compétences">
+                                <p:dataTable id="recapCompetenceDT" value="#{profilUtilisateurBacking.utilisateurDto.competenceList}" var="competence" rowIndexVar="index">
+                                    <p:column headerText="#" style="width: 20px;"><h:outputText value="#{index+1}"/></p:column>
+                                    <p:column headerText="Compétences"><h:outputText value="#{competence.libelle}"/></p:column>
+                                    <p:column headerText="Description"><h:outputText value="#{competence.description}"/></p:column>
+                                </p:dataTable>
+                            </p:fieldset>
+                            <p:spacer height="20" width="10"/>
+                            <p:fieldset legend="Activités Entrepreneuriales">
+                                <p:dataTable id="recapBusinessDT" value="#{profilUtilisateurBacking.utilisateurDto.businessList}" var="business" rowIndexVar="index">
+                                    <p:column headerText="#" style="width: 20px;"><h:outputText value="#{index+1}"/></p:column>
+                                    <p:column headerText="Libelle"><h:outputText value="#{business.libelle}"/></p:column>
+                                    <p:column headerText="Domaine"><h:outputText value="#{business.domaine.libelle}"/></p:column>
+                                    <p:column headerText="Description"><h:outputText value="#{business.description}"/></p:column>
+                                    <p:column headerText="Réseaux sociaux">
+                                        <i class="fa fa-facebook"></i> : <h:outputText value="#{business.facebook}"/><br/>
+                                        <i class="fa fa-instagram"></i> : <h:outputText value="#{business.instagram}"/>
+                                    </p:column>
+                                </p:dataTable>
+                            </p:fieldset>
+                        </div>
+                    </div>
                 </div>
             </div>
         </div>
